# oskit

./: ANNOUNCE  BUGS.details  COPYING  CREDITS  GNUmakerules  GNUmakerules-arm32  GNUmakerules-lib  GNUmakerules-top  GNUmakerules-x86  GNUmakerules-x86-exe  Makeconf.in  README.md  configure  configure.ac  configure.in  gensym.awk  modules.x86.pc  modules.x86.pc.full
amm/: GNUmakefile.in  amm_alloc_entry.c  amm_allocate.c  amm_deallocate.c  amm_destroy.c  amm_dump.c  amm_find_gen.c  amm_init.c  amm_modify.c  amm_select.c
amm/examples/: amap.c  amap.h  rmap.c  rmap.h  simple_amap.c  simple_amap.h  simple_rmap.c  simple_rmap.h
boot/: boot.h  boot_start.c  do_boot.S  grub-msdos-floppy.img.gz.uue  mkdosfloppy
boot/bsd/: main.c  (+4 more)
bootp/: GNUmakefile.in  GNUmakerules  driver.c  netmask.c  test.c  udp.h
clientos/: GNUmakefile.in  GNUmakerules  README  appmem.c  mem.c
com/: GNUmakerules  README  absio_wrapper.c  asyncio_wrapper.c  avc.c  blk_io_subset.c  buf_io_extern.c  charqueue.c  com_queue.c  cq_intr_stream.c  create_listener.c  dirents_wrapper.c  file_clock.c  fs_wrapper.c  iids.awk  net_io.c  net_io_fanout.c  openfile_absio.c  openfile_rwl.c  pqueue.c  principal.c  random.c  services.c  sfs_hashtab.h  sfs_new_hashtab.c  sfs_node.c  sfs_peropen.c  socket_wrapper.c  sockio_wrapper.c  trivial_stream.c  uspf.c
crt/: GNUmakerules
dev/: clock.c  device_register.c  dma.c  dump.c  log.c  membus.c  openfile_netio.c  osenv_device.c  osenv_driver.c  osenv_irq.c  osenv_isa.c  osenv_log.c  osenv_mem.c  osenv_pci_config.c  osenv_rtc.c  osenv_sleep.c  panic.c  pci.c  probe.c  root.c  sleep.c  softirq.c  spf_ether.c  wrap_blkio.c
diskpart/: GNUmakefile.in  README  dump.c  find.c  find_disklabel.c  find_pcbios.c  lookup.c  lookup_string.c  lookup_string_blkio.c
doc/: GNUmakefile.in  README  README.doc  clientos.tex  com-interface.fig  com.tex  defs.tex  dev.tex  diskpart.tex  fdev-user-mode.fig  flask.tex  freebsd-libc.tex  freebsd-math.tex  fs-hier.fig  fsnamespace.tex  hyperref.cfg  intf.tex  io.tex  libc.tex  libdev.tex  linux-fs.tex  memdebug.tex  memfs.tex  multiboot-spec.tex  netbsd-fs.tex  oskit-www.tex  oskit.tex  oskitunix.fig  pd-bw.fig  pd.tex  pure-model.fig  register.tex  rtld.tex  smp.tex  startup.tex  svgalib.tex  svm.tex  synch.tex  sys.bib  tex4ht.cfg  (+2 more)
examples/: README
exec/: objfmts.h
flask/: GNUmakerules  access_vectors  initial_sids  mkaccess_vector.sh
fsnamespace/: README
fsread/: GNUmakefile.in  README  common.c  common.h  disk_inode.h  ext2_file_io.c  ffs_file_io.c  open.c
fudp/: GNUmakefile.in  README  socket.c
gprof/: GNUmakefile.in  GNUmakerules  arcs.c  dfn.c  gprof_printf.c  i386.c  printgprof.c  printlist.c  qsort.c
hpfq/: README  hpfq_impl.h
kern/: GNUmakefile.in  GNUmakerules  anno_intr.c  base_cooked_termios.c  base_raw_termios.c  gdb_serial.c  version.c
knit/: All.unit  Boot.unit  CmdLine.unit  FileSystems.unit  Flags.unit  Graphics.unit  Interrupt.unit  Misc.unit  Process.unit  Security.unit  Threads.unit  Time.unit  X86.unit
libc/: GNUmakefile.in  GNUmakerules  README
libmad/: GNUmakefile.in  mad.h
lmm/: lmm_add_free.c  lmm_add_region.c  lmm_alloc_aligned.c  lmm_alloc_page.c  lmm_avail.c  lmm_dump.c  lmm_find_free.c  lmm_stats.c
memdebug/: GNUmakefile.in  README  memdebug.h  memdebug_alloc.c  memdebug_mark.c  memdebug_mem.c  memdebug_printf.c  memdebug_sweep.c
netbsd/: README
netdisk/: GNUmakefile.in  devices.c  driver.h  fileops.c  fileops.h  image.c  imagehdr.h  main.c  mem_lock.c  misc.c  perfmon.h  rpc.h  socket.c  socket.h  timer.c  timer.h
oskit/: GNUmakefile.in  GNUmakerules  README  amm.h  anno.h  clientos.h  compiler.h  console.h  debug.h  fudp.h  gdb.h  gdb_serial.h  hpfq.h  lmm.h  memdebug.h  mib.h  pd.h  principal.h  smp.h  sproc.h  startup.h  time.h  tty.h  uvm.h  version.h
oskit-20020317/: BUGS  GNUmakefile.in  GNUmakerules  INSTALL  LICENSE  README  aclocal.m4  gensym.awk  modules.arm32.shark
posix/: README
realtime/: heartbeat.c
rtld/: GNUmakerules  README  debug.c  ldscript  load_object.c  rtld.h
security/: avtab.c  constraint.h  ebitmap.h  global.h  hashtab.c  hashtab.h  mls.h  mls_types.h  policy_parse.y  policy_scan.l  policydb.h  queue.h  services.h  sidtab.c  sidtab.h  symtab.c  symtab.h
smp/: GNUmakefile.in
startup/: README  bmod_populate.c  start_bmod.c  start_clock.c  start_conf_network.c  start_conf_network_eif.c  start_conf_network_eifconfig.c  start_conf_network_eifdown.c  start_conf_network_host.c  start_conf_network_open_eif.c  start_conf_network_router.c  start_console.c  start_devices.c  start_disk.c  start_fs.c  start_fs_bmod.c  start_fs_native.c  start_fs_native_bmod.c  start_fs_native_pthreads.c  start_getinfo_network.c  start_net_devices.c  start_network.c  start_network_native.c  start_network_router.c  start_network_single.c  start_osenv.c  start_svm.c  start_world.c
svm/: GNUmakefile.in  GNUmakerules  mem.c  mincore.c  mmap.c  osenv_mem.c  svm_alloc.c  svm_init.c  svm_internal.h  svm_mapped.c  svm_pagein.c  svm_pageout.c  svm_pager_init.c  svm_physmem.c  svm_protect.c  svm_segv_handler.c
threads/: GNUmakefile.in  GNUmakerules  README  listener.c  netio.c  osenv_lock.c  osenv_sleep.c  panic.c  pthread_attr.c  pthread_cancel.c  pthread_cond.c  pthread_default_attr.c  pthread_destroy.c  pthread_detach.c  pthread_exit.c  pthread_init.c  pthread_internal.h  pthread_ipc.c  pthread_ipc.h  pthread_mutex.c  pthread_schedconf.c  pthread_schedconf.h  pthread_schedmode.c  pthread_scheduler.c  pthread_setprio.c  pthread_setschedparam.c  pthread_signal.c  pthread_specific.c  pthread_stats.h  pthread_yield.c  sched_realtime.h
tmcp/: GNUmakefile.in  README  start_tmcp.c  tmcp.c  tmcp.h  tmcp_log.c
udp/: GNUmakefile.in  README  arp.c  eth.c
unix/: base_irq_softint_handler.c  base_stack.S  bmodfs.c  fd.c  libkern.c  mem_lock.c  mmap.c  native_errno.h  native_errnos.h  oskit_linux_block.c  pit.c  pthread_guard.c  rtclock.c  stdio.c  support.h  synch.c  threaded_fd.c  threaded_stdio.c  unix_mem.c  version.c
unsupported/: README  bus_walk_lookup.c  dev_mem.c  netio_link.c
(+2911 files in other folders)
